--- a/movie-website/src/Style/MovieList.css
+++ b/movie-website/src/Style/MovieList.css
@@ -7,7 +7,7 @@
     grid-template-columns: repeat(5,1fr);
     gap: 20px;
 }
-#contentMain>.movieDiv{
+#contentMain .movieDiv{
     width: 100%;
     height: 500px;
     cursor: pointer;
@@ -16,13 +16,13 @@
     background-color: rgb(85, 85, 85);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-#contentMain>.movieDiv>img{
+#contentMain .movieDiv img{
     width: 100%;
     height: 340px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.movieDiv p{
+#contentMain .movieDiv p{
     width: 90%;
     margin: auto;
     background-color: transparent;
@@ -31,10 +31,10 @@
     font-size: 17px;
     font-weight: lighter;
 }
-.movieDiv p:hover{
+#contentMain .movieDiv p:hover{
     color: #FEA641;
 }
-.bookmarkMovie{
+#contentMain .movieDiv .bookmarkMovie{
     outline: none;
     border: none;
     cursor: pointer;
@@ -43,7 +43,7 @@
     right: 0px;
     background-color: transparent;
 }
-.movieDiv .bookmarkText{
+#contentMain .movieDiv .bookmarkText{
     position: absolute;
     font-size: 13px;
     padding: 4px;
@@ -55,6 +55,6 @@
     top: -10px;
     display: none;
 }
-.movieDiv:hover .bookmarkText {
+#contentMain .movieDiv:hover .bookmarkText {
     display: block;
   }
