--- a/Frontend/movie-website/src/Style/LogInUser.css
+++ b/Frontend/movie-website/src/Style/LogInUser.css
@@ -1,67 +1,66 @@
-#login{
-    width: 30%;
-    border: 1px solid transparent;
-  border-radius: 20px; 
+#loginDiv{
+    width: 28%;
     margin: auto;
-   background-color: #fea641;
-   
-}
-#login>input{
-    width: 95%;
-    padding: 10px 10px;
-    margin: 10px 10px;
-   color: #fea641;
-   border: 1px solid transparent;
-   border-radius: 10px;
-}
-#login>input::placeholder{
-    color: #fff;
-}
-#login>#submit{
-    width: 95%;
-    padding: 10px 10px;
-    margin: 10px;
-    font-size: large;
-    font-weight: bolder;
-    cursor: pointer;
-    color: #fea641;
-    border: 1px solid transparent;
+    margin-top: 80px;
     border-radius: 10px;
-    background-color: #313135;
-}
-#box{
-    width: 95%;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    margin: 10px 10px;
     background-color: #fea641;
+    padding: 20px 15px;
 }
-#box>P{
-color:#fff;
-text-align: center;
-border: 1px solid transparent;
-    border-radius: 10px;
-    margin-bottom: 20px;
-padding:10px 10px;
-}
-#login>#img{
-    height: 70px;
-    border: 1px solid transparent;
+#loginDiv img{
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
-    margin-left: 40%;
-    margin-top: 20px;
-    margin-bottom: 2px;
-    width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-#login>h1{
-    color: black;
-    border: 1px solid transparent;
+#loginDiv>h2{
+    margin-top: 10px;
+    text-align: center;
+}
+#loginDiv>input{
+    width: 100%;
+    height: 35px;
+    margin-top: 20px;
     border-radius: 10px;
-    width: 90%;
-    background-color: #fea641;
-    margin: 10px 10px;
-    margin-left: 20px;
-    font-weight: bolder;
-    font-size: 25px;
-    padding: 10px 10px;
+    outline: none;
+    border: none;
+    background-color: #595959;
+    padding-left: 10px;
+    font-size: 15px;
+    color: white;
+}
+#loginDiv>input::placeholder{
+    color: white;
+}
+#loginDiv>button{
+    width: 100%;
+    height: 40px;
+    margin-top: 30px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    background-color: #595959;
+    cursor: pointer;
+    font-size: 18px;
+    color: #fea641;
+    font-weight: bold;
+}
+#loginDiv>button:hover{
+    background-color: #343434;
+}
+#loginDiv>hr{
+    width: 100%;
+    border: none;
+    border-top: 1px dashed rgb(0, 0, 0);
+    margin-top: 20px;
+    outline: none;
+}
+#newUser{
+    margin-top: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+#newUser:hover{
+    color: white;
 }
