--- a/Frontend/movie-website/src/Style/Navbar.css
+++ b/Frontend/movie-website/src/Style/Navbar.css
@@ -32,7 +32,6 @@
     outline: none;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    color: white;
     box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
 }
 #searchBtn{
@@ -59,7 +58,7 @@
     justify-content: space-evenly;
 }
 #rightNav .rightNavBtn{
-    width:30%;
+    width:35%;
     height: 40px;
     border-radius: 10px;
     font-size: 18px;
@@ -73,6 +72,7 @@
     cursor: pointer;
 }
 #rightNav .rightNavBtn:hover{
+    width: 100%;
     background-color: rgb(82, 82, 82);
     color: #FEA641;
 }
@@ -94,7 +94,7 @@
     border-radius: 20%;
     border: 1px solid rgb(169, 155, 155);
     position: relative;
-    z-index: 2
+    z-index: 2;
 }
 #options{
     width: 94%;
