--- a/Frontend/movie-website/src/index.css
+++ b/Frontend/movie-website/src/index.css
@@ -3,5 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins",sans-serif;
+  /* background-color: #313135; */
+}
+body{
   background-color: #313135;
 }
