login and signup page basic responsive done

--- a/Frontend/movie-website/src/Style/LogInUser.css
+++ b/Frontend/movie-website/src/Style/LogInUser.css
@@ -64,3 +64,13 @@
 #newUser:hover{
     color: white;
 }
+
+@media only screen and (max-width :766px){
+    #loginDiv{
+        width: 80%;
+        margin-top: 150px;
+    }
+    #loginDiv>h2{
+        font-size: 22px;
+    }
+}
