--- a/Frontend/movie-website/src/Style/MoviePagination.css
+++ b/Frontend/movie-website/src/Style/MoviePagination.css
@@ -1,11 +1,10 @@
 #moviePagination{
-    width: 50%;
-    border: 1px solid white;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    padding: 10px;
+    width: 35%;
+    display: flex;
+    justify-content: center;
+    padding: 10px 5px;
     border-radius: 10px;
-    color: white;
+    background-color: rgb(202, 201, 201);
+    margin: auto;
+    margin-bottom: 15px;
 }
