--- a/Frontend/movie-website/src/Style/Responsive.css
+++ b/Frontend/movie-website/src/Style/Responsive.css
@@ -1,7 +1,9 @@
-/* @media only screen and (min-width: 880px) {
+ @media only screen and (min-width: 880px) {
+    /*  ================================== */
     #navbar{
         width: 95%;
-        height: 20px;
+        height: 60px;
+        display: none;
         box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
         color: #FEA641;
         display: flex;
@@ -11,30 +13,30 @@
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 10px;
     }
+   
     #leftNav{
         width: 25%;
         display: flex;
         align-items: center;
+      
         justify-content: center;
-    }
-    #leftNav h1{
-       font-size: 10px;
-       margin-left: -20px;
     }
     #bottomNav{
         width: 38%;
-        height: 25px;
+        height: 45px;
         display: flex;
+       
         justify-content: space-between;
         align-items: center;
     }
     #searchBar{
-        width: 18%;
+        width: 88%;
         height:90%;
         padding-left: 10px;
         font-size: 18px;
         border: none;
         outline: none;
+       
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
         box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
@@ -47,12 +49,14 @@
         border: none;
         border-bottom-right-radius: 10px;
         border-top-right-radius: 10px;
+       
         background-color: rgb(76, 80, 81);
     }
     #searchBtn:hover{
         background-color:rgb(122, 129, 131);
     }
     #searchBar::placeholder{
+        display: none;
         color: rgb(182, 179, 179);
     }
     #rightNav{
@@ -61,6 +65,7 @@
         display: flex;
         align-items: center;
         justify-content: space-evenly;
+      
     }
     #rightNav .rightNavBtn{
         width:35%;
@@ -75,11 +80,13 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+       
     }
     #rightNav .rightNavBtn:hover{
         width: 100%;
         background-color: rgb(82, 82, 82);
         color: #FEA641;
+       
     }
     #optionsMain{
         width: 95%;
@@ -93,7 +100,7 @@
         overflow: hidden;
     }
     #optionsMain>button{
-        width: 3%;
+        width: 5%;
         height: 100%;
         cursor: pointer;
         border-radius: 20%;
@@ -119,14 +126,321 @@
         color: white;
         font-weight: bold;
     }
-  } */
+    #options>p:hover{
+        background-color: rgb(82, 82, 82);
+        color: #FEA641;
+    }
+    /*  ================================== */
+    #newNavbar{
+        width: 95%;
+        height: 60px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+        color: #FEA641;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto;
+        display: none;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 10px;
+    }
+    #newLeftNav{
+        width: 25%;
+        display: flex;
+        display: none;
+        align-items: center;
+        justify-content: center;
+    }
+    #newLeftNav img{
+        width: 60px;
+        height: 50px;
+        border-radius: 60%;
+        display: block;
+        display: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #newBottomNav{
+        width: 42%;
+        display: none;
+        height: 45px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    #newSearchBar{
+        width: 94%;
+        height:90%;
+        padding-left: 10px;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        display: none;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    }
+    #newSearchBtn{
+        width: 18%;
+        height: 95%;
+        cursor: pointer;
+        outline: none;
+        display: none;
+        border: none;
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+        background-color: rgb(76, 80, 81);
+    }
+    #newSearchBtn:hover{
+        background-color:rgb(122, 129, 131);
+    }
+    #newSearchBar::placeholder{
+        color: rgb(182, 179, 179);
+        display: none;
+    }
+    #newRightNav{
+        width: 30%;
+        height: 100%;
+        display: flex;
+        display: none;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    #newRightNav .newRightNavBtn{
+        width:25%;
+        height: 40px;
+        border-radius: 10px;
+        font-size: 12px;
+        outline: none;
+        border: none;
+        background-color:rgb(122, 129, 131);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: none;
+        cursor: pointer;
+    }
+    #newRightNav .newRightNavBtn:hover{
+        width: 100%;
+        background-color: rgb(82, 82, 82);
+        color: #FEA641;
+        display: none;
+    }
+
+    /* ==================Movie Page CSS=================================== */
+    #contentMain{
+        width: 95%;
+        padding-bottom: 50px;
+        margin: auto;
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 20px;
+    }
+    #contentMain .movieDiv{
+        width: 100%;
+        height: 270px;
+        cursor: pointer;
+        border-radius: 10px;
+        position: relative;
+        background-color: rgb(85, 85, 85);
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+    #contentMain .movieDiv img{
+        width: 100%;
+        height: 150px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    #contentMain .movieDiv p{
+        width: 90%;
+        margin: auto;
+        background-color: transparent;
+        color: white;
+        margin-top: 15px;
+        font-size: 14px;
+        font-weight: lighter;
+    }
+    #contentMain .movieDiv p:hover{
+        color: #FEA641;
+    }
+    #contentMain .movieDiv .bookmarkMovie{
+        outline: none;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background-color: transparent;
+    }
+    #contentMain .movieDiv .bookmarkText{
+        position: absolute;
+        font-size: 13px;
+        padding: 4px;
+        background-color: red;
+        color: white;
+        width: auto;
+        border-radius: 3px;
+        right: 35px;
+        top: -10px;
+        display: none;
+    }
+    #contentMain .movieDiv:hover .bookmarkText {
+        display: block;
+        color: white;
+      }
+  } 
   
   /* ============================================================================= */
   
   @media only screen and (max-width: 880px) {
+    /*  ================================== */
     #navbar{
+        width: 95%;
+        height: 60px;
+        display: none;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+        color: #FEA641;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto;
+        display: none;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 10px;
+    }
+   
+    #leftNav{
+        width: 25%;
+        display: flex;
+        align-items: center;
+        display: none;
+        justify-content: center;
+    }
+    #bottomNav{
+        width: 38%;
+        height: 45px;
+        display: flex;
+        display: none;
+        justify-content: space-between;
+        align-items: center;
+    }
+    #searchBar{
+        width: 88%;
+        height:90%;
+        padding-left: 10px;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        display: none;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    }
+    #searchBtn{
+        width: 12%;
+        height: 95%;
+        cursor: pointer;
+        outline: none;
+        border: none;
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+        display: none;
+        background-color: rgb(76, 80, 81);
+    }
+    #searchBtn:hover{
+        background-color:rgb(122, 129, 131);
+    }
+    #searchBar::placeholder{
+        display: none;
+        color: rgb(182, 179, 179);
+    }
+    #rightNav{
+        width: 30%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        display: none;
+    }
+    #rightNav .rightNavBtn{
+        width:35%;
+        height: 40px;
+        border-radius: 10px;
+        font-size: 18px;
+        outline: none;
+        border: none;
+        background-color:rgb(122, 129, 131);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        display: none;
+    }
+    #rightNav .rightNavBtn:hover{
         width: 100%;
-        height: 30px;
+        background-color: rgb(82, 82, 82);
+        color: #FEA641;
+        display: none;
+    }
+    #optionsMain{
+        width: 95%;
+        height: 50px;
+        margin: auto;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        overflow: hidden;
+    }
+    #optionsMain>button{
+        width: 5%;
+        height: 100%;
+        cursor: pointer;
+        border-radius: 20%;
+        border: 1px solid rgb(169, 155, 155);
+        position: relative;
+        z-index: 2;
+    }
+    #options{
+        width: 94%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        border-radius: 2px;
+        position: relative;
+      z-index: 1; 
+    }
+    #options>p{
+        padding: 10px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+        cursor: pointer;
+        border-radius: 10px;
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+    }
+    #options>p:hover{
+        background-color: rgb(82, 82, 82);
+        color: #FEA641;
+    }
+    #moviePagination{
+        width: 105%;
+        display: flex;
+        justify-content: center;
+        padding: 10px 5px;
+        border-radius: 10px;
+        background-color: rgb(202, 201, 201);
+        margin: auto;
+        margin-bottom: 55px;
+    }
+    /*  ================================== */
+    #newNavbar{
+        width: 95%;
+        height: 60px;
         box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
         color: #FEA641;
         display: flex;
@@ -136,37 +450,40 @@
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 10px;
     }
-    #leftNav{
-        width: 45%;
+    #newLeftNav{
+        width: 25%;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    #leftNav h1{
-        width: 100%;
-       font-size: 15px;
-       /* margin-left: -20px; */
+    #newLeftNav img{
+        width: 60px;
+        height: 50px;
+        border-radius: 60%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
-    #bottomNav{
-        width: 34%;
-        height: 25px;
+    #newBottomNav{
+        width: 42%;
+        height: 45px;
         display: flex;
-        /* justify-content: space-between;
-        align-items: center; */
+        justify-content: space-between;
+        align-items: center;
     }
-    #searchBar{
-        width: 48%;
+    #newSearchBar{
+        width: 94%;
         height:90%;
-        padding-left: 3px;
-        font-size: 14px;
+        padding-left: 10px;
+        font-size: 18px;
         border: none;
         outline: none;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
         box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
     }
-    #searchBtn{
-        width: 6%;
+    #newSearchBtn{
+        width: 18%;
         height: 95%;
         cursor: pointer;
         outline: none;
@@ -175,76 +492,37 @@
         border-top-right-radius: 10px;
         background-color: rgb(76, 80, 81);
     }
-    #searchBtn:hover{
+    #newSearchBtn:hover{
         background-color:rgb(122, 129, 131);
     }
-    #searchBar::placeholder{
+    #newSearchBar::placeholder{
         color: rgb(182, 179, 179);
     }
-    #rightNav{
-        width: 70%;
+    #newRightNav{
+        width: 30%;
         height: 100%;
         display: flex;
-        /* align-items: center; */
-        /* justify-content: space-; */
+        align-items: center;
+        justify-content: space-evenly;
     }
-    #rightNav .rightNavBtn{
-        width:35%;
-        height: 10px;
-        border-radius: 4px;
-        font-size: 14px;
+    #newRightNav .newRightNavBtn{
+        width:25%;
+        height: 40px;
+        border-radius: 10px;
+        font-size: 12px;
         outline: none;
         border: none;
         background-color:rgb(122, 129, 131);
         color: white;
         display: flex;
-        /* justify-content: center; */
-        padding: 5px 5px;
-        /* align-items: center; */
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
     }
-    #rightNav .rightNavBtn:hover{
+    #newRightNav .newRightNavBtn:hover{
         width: 100%;
         background-color: rgb(82, 82, 82);
         color: #FEA641;
-    }
-    #optionsMain{
-        width: 95%;
-        height: 50px;
-        margin: auto;
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        position: relative;
-        overflow: hidden;
-    }
-    #optionsMain>button{
-        width: 3%;
-        height: 100%;
-        cursor: pointer;
-        border-radius: 20%;
-        border: 1px solid rgb(169, 155, 155);
-        position: relative;
-        z-index: 2;
-    }
-    #options{
-        width: 94%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        border-radius: 2px;
-        position: relative;
-      z-index: 1; 
-    }
-    #options>p{
-        padding: 10px;
-        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
-        cursor: pointer;
-        border-radius: 10px;
-        margin-left: 15px;
-        color: white;
-        font-weight: bold;
     }
 
     /* ==================Movie Page CSS=================================== */
@@ -252,7 +530,7 @@
         width: 95%;
         padding-bottom: 50px;
         margin: auto;
-        margin-top: 50px;
+        margin-top: 8px;
         display: grid;
         grid-template-columns: repeat(2,1fr);
         gap: 20px;
@@ -314,44 +592,12 @@
   /*================================================================================================= */
   
   @media (min-width: 768px) and (max-width: 1024px) {
-    #navbar {
-      width: 100%;
-    }
-    #statistic_div {
-      width: 85%;
-    }
-    nav ul li {
-      margin: 10px 10px 0 10px;
-    }
+   
   }
   
   @media only screen and (min-width: 220px) and (max-width: 880px) {
-    #project {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: auto;
-      gap: 2%;
-      /* margin-left: 20px;
-          margin-bottom: 20px; */
-      padding-bottom: 150px;
-    }
-    #skills {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: auto;
-      gap: 20px;
-      padding: 20px;
-      column-gap: 30px;
-    }
+   
   }
   @media only screen and (min-width: 220px) and (max-width: 880px) {
-    #two > a > img {
-      height: 43px;
-      padding: 9px;
-      width: 40px;
-    }
-    #l1 {
-      margin-left: -20px;
-      text-align: center;
-    }
+   
   }
