final touch for frontend

--- a/Frontend/movie-website/src/Style/MoviePagination.css
+++ b/Frontend/movie-website/src/Style/MoviePagination.css
@@ -8,3 +8,15 @@
     margin: auto;
     margin-bottom: 15px;
 }
+@media only screen and (max-width: 880px) {
+    #moviePagination{
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        padding: 10px 5px;
+        border-radius: 10px;
+        background-color: rgb(202, 201, 201);
+        margin: auto;
+        margin-bottom: 15px;
+    }
+}
