--- a/Frontend/movie-website/src/Style/MovieList.css
+++ b/Frontend/movie-website/src/Style/MovieList.css
@@ -59,3 +59,141 @@
     display: block;
     color: white;
   }
+  @media only screen and (max-width: 880px) {
+    #contentMain{
+        width: 90%;
+        padding-bottom: 50px;
+        margin: auto;
+        margin-top: 8px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 20px;
+    }
+    #contentMain .movieDiv{
+        width: 100%;
+        height: auto;
+        cursor: pointer;
+        border-radius: 10px;
+        padding-bottom:10px; 
+        background-color: rgb(85, 85, 85);
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+    #contentMain .movieDiv img{
+        width: 100%;
+        height: 150px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    #contentMain .movieDiv p{
+        width: 90%;
+        margin: auto;
+        background-color: transparent;
+        color: white;
+        margin-top: 15px;
+        font-size: 13px;
+        font-weight: lighter;
+    }
+    #contentMain .movieDiv p:hover{
+        color: #FEA641;
+    }
+    #contentMain .movieDiv .bookmarkMovie{
+        outline: none;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background-color: transparent;
+    }
+    #contentMain .movieDiv .bookmarkText{
+        position: absolute;
+        font-size: 13px;
+        padding: 4px;
+        background-color: red;
+        color: white;
+        width: auto;
+        border-radius: 3px;
+        right: 35px;
+        top: -10px;
+        display: none;
+    }
+    #contentMain .movieDiv:hover .bookmarkText {
+        display: block;
+        color: white;
+      }
+  }
+  @media (min-width: 768px) and (max-width: 1180px) {
+    #contentMain{
+        width: 95%;
+        padding-bottom: 50px;
+        margin: auto;
+        margin-top: 8px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 20px;
+    }
+}
+  @media only screen and (min-width: 880px) {
+    #contentMain{
+        width: 95%;
+        padding-bottom: 50px;
+        margin: auto;
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap: 20px;
+    }
+    #contentMain .movieDiv{
+        width: 100%;
+        cursor: pointer;
+        height: 500px;
+        border-radius: 10px;
+        position: relative;
+        background-color: rgb(85, 85, 85);
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+    #contentMain .movieDiv img{
+        width: 100%;
+        height: 340px;
+        object-fit: cover;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    #contentMain .movieDiv p{
+        width: 90%;
+        margin: auto;
+        background-color: transparent;
+        color: white;
+        margin-top: 15px;
+        font-size: 17px;
+        font-weight: lighter;
+    }
+    #contentMain .movieDiv p:hover{
+        color: #FEA641;
+    }
+    #contentMain .movieDiv .bookmarkMovie{
+        outline: none;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background-color: transparent;
+    }
+    #contentMain .movieDiv .bookmarkText{
+        position: absolute;
+        font-size: 13px;
+        padding: 4px;
+        background-color: red;
+        color: white;
+        width: auto;
+        border-radius: 3px;
+        right: 35px;
+        top: -10px;
+        display: none;
+    }
+    #contentMain .movieDiv:hover .bookmarkText {
+        display: block;
+        color: white;
+      }  
+  }
