--- a/Frontend/movie-website/src/Style/Navbar.css
+++ b/Frontend/movie-website/src/Style/Navbar.css
@@ -118,3 +118,106 @@
     background-color: rgb(82, 82, 82);
     color: #FEA641;
 }
+@media only screen and (min-width: 880px) {
+    #navbar{
+        width: 95%;
+        height: 60px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+        color: #FEA641;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 10px;
+    }
+    #optionsMain{
+        width: 95%;
+        height: 50px;
+        margin: auto;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        overflow: hidden;
+    }
+    #optionsMain>button{
+        width: 5%;
+        height: 100%;
+        cursor: pointer;
+        border-radius: 20%;
+        border: 1px solid rgb(169, 155, 155);
+        position: relative;
+        z-index: 2;
+    }
+    #options{
+        width: 94%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        border-radius: 2px;
+        position: relative;
+      z-index: 1; 
+    }
+    #options>p{
+        padding: 10px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+        cursor: pointer;
+        border-radius: 10px;
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+    }
+    #options>p:hover{
+        background-color: rgb(82, 82, 82);
+        color: #FEA641;
+    }
+}
+@media only screen and (max-width: 880px) {
+    #navbar{
+        display: none;
+    }
+   #optionsMain{
+        width: 95%;
+        height: 50px;
+        margin: auto;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        overflow: hidden;
+    }
+    #optionsMain>button{
+        width: 5%;
+        height: 100%;
+        cursor: pointer;
+        border-radius: 20%;
+        border: 1px solid rgb(169, 155, 155);
+        position: relative;
+        z-index: 2;
+    }
+    #options{
+        width: 94%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        border-radius: 2px;
+        position: relative;
+      z-index: 1; 
+    }
+    #options>p{
+        padding: 10px;
+        box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+        cursor: pointer;
+        border-radius: 10px;
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+    }
+    #options>p:hover{
+        background-color: rgb(82, 82, 82);
+        color: #FEA641;
+    }
+}
