--- a/Frontend/movie-website/src/Style/NewNavbar.css
+++ b/Frontend/movie-website/src/Style/NewNavbar.css
@@ -1,5 +1,5 @@
 #newNavbar{
-    width: 95%;
+    width: 100%;
     height: 60px;
     box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
     color: #FEA641;
@@ -7,27 +7,30 @@
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 10px;
+    padding-left: 5px;
+    /* border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 10px; */
 }
-#newLeftNav{
-    width: 25%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#newLeftNav img{
+    width: 60px;
+    height: 50px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 #newBottomNav{
-    width: 38%;
+    width: 42%;
     height: 45px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 #newSearchBar{
-    width: 88%;
+    width: 94%;
     height:90%;
     padding-left: 10px;
-    font-size: 18px;
+    font-size: 14px;
     border: none;
     outline: none;
     border-top-left-radius: 10px;
@@ -35,7 +38,7 @@
     box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
 }
 #newSearchBtn{
-    width: 12%;
+    width: 18%;
     height: 95%;
     cursor: pointer;
     outline: none;
@@ -58,10 +61,10 @@
     justify-content: space-evenly;
 }
 #newRightNav .newRightNavBtn{
-    width:35%;
+    width:25%;
     height: 40px;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 12px;
     outline: none;
     border: none;
     background-color:rgb(122, 129, 131);
@@ -75,4 +78,12 @@
     width: 100%;
     background-color: rgb(82, 82, 82);
     color: #FEA641;
+} 
+@media only screen and (max-width: 880px) {
+  
+}
+@media only screen and (min-width: 880px) {
+    #newNavbar{
+        display: none;
+    }
 }
