--- a/Frontend/movie-website/src/Style/MovieList.css
+++ b/Frontend/movie-website/src/Style/MovieList.css
@@ -71,7 +71,7 @@
     }
     #contentMain .movieDiv{
         width: 100%;
-        height: auto;
+        height: 375px;
         cursor: pointer;
         border-radius: 10px;
         padding-bottom:10px; 
@@ -80,7 +80,8 @@
     }
     #contentMain .movieDiv img{
         width: 100%;
-        height: 150px;
+        height: 250px;
+        object-fit: cover;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
     }
