complain box added

--- a/Frontend/movie-website/src/Style/MovieList.css
+++ b/Frontend/movie-website/src/Style/MovieList.css
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: repeat(5,1fr);
     gap: 20px;
+    position: relative;
 }
 #contentMain .movieDiv{
     width: 100%;
@@ -13,6 +14,7 @@
     cursor: pointer;
     border-radius: 10px;
     position: relative;
+    z-index: 0;
     background-color: rgb(85, 85, 85);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
