--- a/Frontend/movie-website/src/Style/Movie.css
+++ b/Frontend/movie-website/src/Style/Movie.css
@@ -1,9 +1,143 @@
-#MovieInfoMain>h1{
+#movieInfoMain{
+    width: 95%;
+    margin: auto;
+    margin-top: 20px;
+    /* border: 1px solid white; */
+    display: flex;
+    justify-content: space-between;
+}
+#movieInfoMain>h1{ 
     color: white;
     margin-top: 40px;
     text-align: center;
 }
-#videoTag{
-    width: 640px;
-    height:360px;
+#movieInfoLeft{
+    width: 70%;
+    min-height: 78vh;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
+}
+#movieInfoLeft>h2{
+    color: #FEA641;
+}
+#selectedMovieDetails{
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    margin-top: 25px; 
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(79, 78, 78);
+}
+#selectedMovieImage{
+    width: 30%;
+    min-height: 350px;
+}
+#selectedMovieImage>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+}
+#selectedMovieInfo{
+    width: 70%;
+    min-height: 350px;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    padding: 20px;
+    color: white;
+    font-size: 18px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+}
+#selectedMovieInfo>p{
+    margin-top: 8px;
+}
+#downloadHeading{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+#downloadLinks{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-around;
+}
+#downloadLinks>div{
+    width: 30%;
+    height: 100%;
+    border-radius: 8px;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    cursor: pointer;
+}
+#downloadLinks>div:hover{
+    color: #FEA641;
+    background-color: rgb(74, 71, 71);
+    font-size: 27px;
+}
+
+/* =========================================================================================================  */
+
+#movieInfoRight{
+    width: 29%;
+    min-height: 78vh;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    padding: 8px 8px;
+    border-radius: 10px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
+}
+#recommededMovieTitle>p{
+    color: #FEA641;
+    text-align: center;
+    font-size: 17px;
+}
+#movieRecommededAppend> .movieRecommeded{
+    width: 100%;
+    margin: auto;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 8px 8px 8px 8px;
+    background-color: rgb(74, 71, 71);
+}
+#movieRecommededAppend> .movieRecommeded>p{
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+}
+#movieRecommededAppend> .movieRecommeded>p:hover{
+    color: #FEA641;
+}
+
+/* ==================================================================================================== */
+@media only screen and (max-width :766px){
+    #movieInfoRight{
+        display: none;
+    }
+    #movieInfoLeft{
+        width: 100%;
+    }
+    #movieInfoLeft>h2{ 
+        font-size: 20px;
+    }
+    #selectedMovieDetails{
+        display: block;
+    }
+    #selectedMovieImage{
+        width: 100%;
+    }
+    #selectedMovieInfo{
+        width: 100%;
+        font-size: 16px;
+    }
 }
