--- a/Frontend/movie-website/src/Style/Movie.css
+++ b/Frontend/movie-website/src/Style/Movie.css
@@ -57,7 +57,26 @@
 #selectedMovieInfo>p{
     margin-top: 8px;
 }
-#downloadHeading{
+#screenshotsImagesDiv{
+    width: 100%;
+    min-height: 50vh;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    padding-bottom: 40px;
+    padding-top: 20px;
+}
+#screenshotsImagesDiv> .screenshotsImages{
+    width: 85%;
+    max-height: 300px;
+    margin: auto;
+    margin-bottom: 25px;
+}
+#screenshotsImagesDiv> .screenshotsImages>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+}
+#downloadHeading,#screenshotsHeading{
     margin-top: 30px;
     margin-bottom: 20px;
     text-align: center;
@@ -66,7 +85,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 #downloadLinks>div{
     width: 30%;
@@ -138,6 +157,21 @@
     }
     #selectedMovieInfo{
         width: 100%;
+        font-size: 16px;
+        border: 8px;
+    }
+    #screenshotsImagesDiv> .screenshotsImages{
+        width: 95%;
+        max-height: 300px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+    #screenshotsImagesDiv{
+        padding-bottom: 20px;
+    }
+    #downloadLinks>div{
+        width: 31%;
+        height: 80%;
         font-size: 16px;
     }
 }
