--- a/Frontend/movie-website/src/Style/Movie.css
+++ b/Frontend/movie-website/src/Style/Movie.css
@@ -82,22 +82,28 @@
     text-align: center;
 }
 #downloadLinks{
-    width: 100%;
+    width: 80%;
     height: 80px;
     display: flex;
     justify-content: space-between;
+    margin: auto;
 }
 #downloadLinks>div{
     width: 30%;
     height: 100%;
     border-radius: 8px;
     box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
-    display: flex;
+    display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
     font-size: 25px;
     cursor: pointer;
+}
+#downloadLinks>div>p{
+    display: block;
+    margin-top: 3px;
 }
 #downloadLinks>div:hover{
     color: #FEA641;
@@ -158,7 +164,7 @@
     #selectedMovieInfo{
         width: 100%;
         font-size: 16px;
-        border: 8px;
+        border-radius: 8px;
     }
     #screenshotsImagesDiv> .screenshotsImages{
         width: 95%;
@@ -169,9 +175,15 @@
     #screenshotsImagesDiv{
         padding-bottom: 20px;
     }
+    #downloadLinks{
+        width: 100%;
+    }
     #downloadLinks>div{
         width: 31%;
         height: 80%;
         font-size: 16px;
+    }
+    #downloadLinks>div:hover{
+        font-size: 18px;
     }
 }
