--- a/Frontend/movie-website/src/Style/Navbar.css
+++ b/Frontend/movie-website/src/Style/Navbar.css
@@ -118,6 +118,24 @@
     background-color: rgb(82, 82, 82);
     color: #FEA641;
 }
+#logoutBtn{
+    position: absolute;
+    top: 48px;
+    width: 135px;
+    height: 40px;
+    border: none;
+    outline: none;
+    background-color:rgb(184, 0, 0);
+    color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
+    font-size: 18px;
+}
+#logoutBtn:hover{
+    color: rgb(255, 0, 0);
+    background-color: rgb(82, 82, 82);
+}
 @media only screen and (min-width: 880px) {
     #navbar{
         width: 95%;
