--- a/Frontend/movie-website/src/Style/Movie.css
+++ b/Frontend/movie-website/src/Style/Movie.css
@@ -176,11 +176,15 @@
         font-size: 16px;
         border-radius: 8px;
     }
-    #screenshotsImagesDiv> .screenshotsImages{
-        width: 95%;
+    #screenshotsImagesDiv .screenshotsImages{
+        width: 98%;
         max-height: 300px;
         margin: auto;
         margin-bottom: 20px;
+    }
+    #screenshotsImagesDiv .screenshotsImages > img{
+        width: 100%;
+        height: 200px;
     }
     #screenshotsImagesDiv{
         padding-bottom: 20px;
