--- a/Frontend/movie-website/src/Style/MoviePagination.css
+++ b/Frontend/movie-website/src/Style/MoviePagination.css
@@ -7,6 +7,7 @@
     background-color: rgb(202, 201, 201);
     margin: auto;
     margin-bottom: 15px;
+    margin-top: 100px;
 }
 @media only screen and (max-width: 880px) {
     #moviePagination{
@@ -18,5 +19,6 @@
         background-color: rgb(202, 201, 201);
         margin: auto;
         margin-bottom: 15px;
+        margin-top: 100px;
     }
 }
